--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,45 @@
 
 # production
 /build
+/dist
+/tmp
+/out-tsc
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 
 # misc
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
+/.sass-cache
+/connect.lock
+/libpeerconnection.log
+testem.log
+/typings
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
+
+# System Files
+.DS_Store
+Thumbs.db
